--- a/apps/calidum-rotae/calidum-rotae.argoapp.yaml
+++ b/apps/calidum-rotae/calidum-rotae.argoapp.yaml
@@ -18,5 +18,5 @@ spec:
     syncOptions:
       - CreateNamespace=true
     automated:
-      selfHeal: false
-      prune: false
+      selfHeal: true
+      prune: true
