--- a/apps/markets/markets.argoapp.yaml
+++ b/apps/markets/markets.argoapp.yaml
@@ -25,5 +25,5 @@ spec:
     syncOptions:
       - CreateNamespace=true
     automated:
-      selfHeal: false
-      prune: false
+      selfHeal: true
+      prune: true
