--- a/apps/raconteurs/grav/raconteurs-grav.argoapp.yaml
+++ b/apps/raconteurs/grav/raconteurs-grav.argoapp.yaml
@@ -20,5 +20,5 @@ spec:
     syncOptions:
       - CreateNamespace=true
     automated:
-      selfHeal: false
-      prune: false
+      selfHeal: true
+      prune: true
