--- a/apps/markets/base/frontend-deployment.yaml
+++ b/apps/markets/base/frontend-deployment.yaml
@@ -62,4 +62,4 @@ spec:
         - name: nginx-log
           emptyDir: {}
       imagePullSecrets:
-        - name: ghcr-secret
+        - name: ghcr-markets-secret
