--- a/apps/conjure/site/conjure.argoapp.yaml
+++ b/apps/conjure/site/conjure.argoapp.yaml
@@ -8,7 +8,7 @@ metadata:
     argocd-image-updater.argoproj.io/image-list: webapp=ghcr.io/conjureets/conjure-site:latest
     argocd-image-updater.argoproj.io/webapp.update-strategy: digest
 spec:
-  project: k8s-cedille-production
+  project: k8s-cedille-production-v2
   destination:
     server: https://cedille.kubernetes.omni.siderolabs.io?cluster=k8s-cedille-production-v2
     namespace: conjure-site
