--- a/apps/cedille/cedille.argoapp.yaml
+++ b/apps/cedille/cedille.argoapp.yaml
@@ -8,7 +8,7 @@ metadata:
     argocd-image-updater.argoproj.io/image-list: webapp=ghcr.io/clubcedille/cedille.etsmtl.ca:latest
     argocd-image-updater.argoproj.io/webapp.update-strategy: digest
 spec:
-  project: default
+  project: k8s-cedille-production-v2
   destination:
     server: https://cedille.kubernetes.omni.siderolabs.io?cluster=k8s-cedille-production-v2
     namespace: cedille
