--- a/apps/dronolab/webApp/dronolab.argoapp.yaml
+++ b/apps/dronolab/webApp/dronolab.argoapp.yaml
@@ -1,24 +1,24 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: raconteurs
+  name: webapp-dronolab
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "2"
-    argocd-image-updater.argoproj.io/image-list: website=ghcr.io/clubcedille/grav:raconteurs
-    argocd-image-updater.argoproj.io/website.update-strategy: digest
+    argocd-image-updater.argoproj.io/image-list: webapp=ghcr.io/dronolab/dronolab-website:latest
+    argocd-image-updater.argoproj.io/webapp.update-strategy: digest
 spec:
   project: k8s-cedille-production-v2
   destination:
     server: https://cedille.kubernetes.omni.siderolabs.io?cluster=k8s-cedille-production-v2
-    namespace: raconteurs-grav
+    namespace: webapp-dronolab
   source:
     repoURL: https://github.com/ClubCedille/k8s-cedille-production-v2
-    path: apps/raconteurs/grav/prod
+    path: apps/dronolab/webApp/prod
     targetRevision: HEAD
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
     automated:
-      selfHeal: true
-      prune: true
+      selfHeal: false
+      prune: false
