--- a/apps/aeroets/grav/aeroets-grav.argoapp.yaml
+++ b/apps/aeroets/grav/aeroets-grav.argoapp.yaml
@@ -8,7 +8,7 @@ metadata:
     argocd-image-updater.argoproj.io/image-list: website=ghcr.io/clubcedille/grav:aeroets
     argocd-image-updater.argoproj.io/website.update-strategy: digest
 spec:
-  project: default
+  project: k8s-cedille-production-v2
   destination:
     server: https://cedille.kubernetes.omni.siderolabs.io?cluster=k8s-cedille-production-v2
     namespace: aeroets-grav
