--- a/apps/markets/markets.argoapp.yaml
+++ b/apps/markets/markets.argoapp.yaml
@@ -13,7 +13,7 @@ metadata:
     argocd-image-updater.argoproj.io/frontend.pull-secret: pullsecret:argocd/ghcr-markets-secret
     argocd-image-updater.argoproj.io/scheduler.pull-secret: pullsecret:argocd/ghcr-markets-secret
 spec:
-  project: default
+  project: k8s-cedille-production-v2
   destination:
     server: https://cedille.kubernetes.omni.siderolabs.io?cluster=k8s-cedille-production-v2
     namespace: markets
