--- a/apps/wiki-cedille/wiki-cedille.argoapp.yaml
+++ b/apps/wiki-cedille/wiki-cedille.argoapp.yaml
@@ -8,12 +8,12 @@ metadata:
     argocd-image-updater.argoproj.io/image-list: wiki=ghcr.io/clubcedille/wiki-cedille:latest
     argocd-image-updater.argoproj.io/wiki.update-strategy: digest
 spec:
-  project: default
+  project: k8s-cedille-production-v2
   destination:
-    server: https://cedille.kubernetes.omni.siderolabs.io?cluster=k8s-cedille-production
+    server: https://cedille.kubernetes.omni.siderolabs.io?cluster=k8s-cedille-production-v2
     namespace: wiki-cedille
   source:
-    repoURL: https://github.com/ClubCedille/k8s-cedille-production
+    repoURL: https://github.com/ClubCedille/k8s-cedille-production-v2
     path: apps/wiki-cedille/prod
     targetRevision: HEAD
   syncPolicy:
