added shell for calidum

--- a/apps/calidum-rotae/prod/kustomization.yaml
+++ b/apps/calidum-rotae/prod/kustomization.yaml
@@ -5,4 +5,5 @@ resources:
   - ../base/discord-provider
   - ../base/calidum-rotae-service
   - ../base/email-provider
+  - ../base/shell-provider
   - ingress.yaml
