--- a/apps/pont-acier/hercule.argoapp.yaml
+++ b/apps/pont-acier/hercule.argoapp.yaml
@@ -1,20 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: campusparent
+  name: hercule
   namespace: argocd
   annotations:
-    argocd-image-updater.argoproj.io/image-list: webapp=ghcr.io/campusparent-aufets/campusparent:1.0.1
+    argocd-image-updater.argoproj.io/image-list: webapp=ghcr.io/clubcedille/hercule-nextjs:latest
     argocd-image-updater.argoproj.io/webapp.update-strategy: digest
-    argocd-image-updater.argoproj.io/webapp.pull-secret: pullsecret:argocd/ghcr-campusparent-secret
 spec:
   project: k8s-cedille-production-v2
   destination:
     server: https://cedille.kubernetes.omni.siderolabs.io?cluster=k8s-cedille-production-v2
-    namespace: campusparent
+    namespace: hercule
   source:
     repoURL: https://github.com/ClubCedille/k8s-cedille-production-v2
-    path: apps/campusparent/prod
+    path: apps/pont-acier/prod
     targetRevision: HEAD
   syncPolicy:
     syncOptions:
