Change readOnlyRootFilesystem to false

--- a/apps/markets/base/frontend-deployment.yaml
+++ b/apps/markets/base/frontend-deployment.yaml
@@ -41,7 +41,7 @@ spec:
             runAsUser: 10001
             runAsGroup: 10001
             allowPrivilegeEscalation: false
-            readOnlyRootFilesystem: true
+            readOnlyRootFilesystem: false
             capabilities:
               drop:
                 - ALL
