--- a/apps/campusparent/base/deployment.yaml
+++ b/apps/campusparent/base/deployment.yaml
@@ -23,7 +23,7 @@ spec:
           emptyDir: {}
       containers:
         - name: campusparent
-          image: ghcr.io/campusparent-aufets/campusparent:1.0.1
+          image: ghcr.io/campusparent-aufets/campusparent:latest
           imagePullPolicy: Always
           readinessProbe:
             httpGet:
