--- a/apps/markets/prod/ingress.yaml
+++ b/apps/markets/prod/ingress.yaml
@@ -44,10 +44,17 @@ spec:
                 name: markets-backend-service
                 port:
                   number: 80
-          - path: /static
+          - path: /static/admin
             pathType: Prefix
             backend:
               service:
                 name: markets-backend-service
                 port:
                   number: 80
+          # - path: /static
+          #   pathType: Prefix
+          #   backend:
+          #     service:
+          #       name: markets-backend-service
+          #       port:
+          #         number: 80
