--- a/apps/markets/prod/ingress.yaml
+++ b/apps/markets/prod/ingress.yaml
@@ -44,17 +44,10 @@ spec:
                 name: markets-backend-service
                 port:
                   number: 80
-          - path: /static/admin
+          - path: /static
             pathType: Prefix
             backend:
               service:
                 name: markets-backend-service
                 port:
                   number: 80
-          # - path: /static
-          #   pathType: Prefix
-          #   backend:
-          #     service:
-          #       name: markets-backend-service
-          #       port:
-          #         number: 80
