--- a/apps/crabe/crabe.argoapp.yaml
+++ b/apps/crabe/crabe.argoapp.yaml
@@ -23,5 +23,5 @@ spec:
     syncOptions:
       - CreateNamespace=true
     automated:
-      selfHeal: false
-      prune: false
+      selfHeal: true
+      prune: true
