--- a/gatus-endpoints.yml
+++ b/gatus-endpoints.yml
@@ -1,4 +1,4 @@
-'# Configuration générée automatiquement': Généré le 2025-09-26T14:55:28.761616
+'# Configuration générée automatiquement': Généré le 2025-09-26T16:13:53.032257
 endpoints:
 - name: acets-prod
   url: https://acets.prodv2.cedille.club
@@ -100,6 +100,16 @@ endpoints:
   - type: discord
     failure-threshold: 3
     success-threshold: 2
+- name: ingenieuses
+  url: https://ingenieuses.ca
+  interval: 5m
+  conditions:
+  - '[STATUS] == 200'
+  - '[RESPONSE_TIME] < 3000'
+  alerts:
+  - type: discord
+    failure-threshold: 3
+    success-threshold: 2
 - name: integrale
   url: https://integrale.etsmtl.ca
   interval: 5m
@@ -182,6 +192,16 @@ endpoints:
     success-threshold: 2
 - name: wiki-prod
   url: https://wiki.prodv2.cedille.club
+  interval: 5m
+  conditions:
+  - '[STATUS] == 200'
+  - '[RESPONSE_TIME] < 3000'
+  alerts:
+  - type: discord
+    failure-threshold: 3
+    success-threshold: 2
+- name: www
+  url: https://www.ingenieuses.ca
   interval: 5m
   conditions:
   - '[STATUS] == 200'
